--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,16 @@
       <groupId>net.java.dev.javacc</groupId>
       <artifactId>javacc</artifactId>
       <version>7.0.13</version>
-  </dependency>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.32</version>
+      <scope>provided</scope>
+    </dependency>
+
 
   </dependencies>
 
